<resources>
    <string name="app_name">Root Activity Launcher</string>

    <string name="extras">Extras</string>
    <string name="action">Action</string>
    <string name="hint_key">Key</string>
    <string name="hint_value">Value</string>
    <string name="filter">Filter</string>
    <string name="scroll_top">Scroll to Top</string>
    <string name="scroll_bottom">Scroll to Bottom</string>
    <string name="regex">Regex</string>
    <string name="app_info">App Info</string>
    <string name="include_components">Search Components</string>
    <string name="data">Data</string>
    <string name="category">Category</string>

    <string name="launch">Launch</string>
    <string name="create_shortcut">Create Shortcut</string>
    <string name="component_info">Component Info</string>
    <string name="extract_apk">Extract APK(s)</string>
    <string name="type">Type</string>

    <string name="integer">Int</string>
    <string name="bool">Bool</string>
    <string name="str">String</string>
    <string name="byte_name">Byte</string>
    <string name="char_name">Char</string>
    <string name="long_name">Long</string>
    <string name="float_name">Float</string>
    <string name="double_name">Double</string>
    <string name="short_name">Short</string>
    <string name="int_al">Int List</string>
    <string name="string_al">String List</string>
    <string name="float_al">Float List</string>
    <string name="double_al">Double List</string>
    <string name="byte_a">Byte Array</string>
    <string name="short_a">Short Array</string>
    <string name="char_a">Char Array</string>
    <string name="int_a">Int Array</string>
    <string name="long_a">Long Array</string>
    <string name="float_a">Float Array</string>
    <string name="double_a">Double Array</string>
    <string name="string_a">String Array</string>
    <string name="component">Component</string>
    <string name="uri">Uri</string>
    <string name="intent">Intent</string>
    <string name="exported">Exported</string>
    <string name="unexported">Unexported</string>
    <string name="permission_required">Permission Required</string>
    <string name="clear">Clear</string>
    <string name="close">Close</string>
    <string name="menu">Menu</string>
    <string name="favorites">Favorites</string>
    <string name="favorite">Favorite</string>
    <string name="unfavorite">Unfavorite</string>

    <string name="activities">Activities (%d)</string>
    <string name="services">Services (%d)</string>
    <string name="receivers">Receivers (%d)</string>

    <string name="enabled_filter">Enabled Filter</string>
    <string name="exported_filter">Exported Filter</string>
    <string name="permission_filter">Permission Filter</string>
    <string name="component_filter">Component Filter</string>
    <string name="system_app_filter">System App Filter</string>

    <string name="filter_disabled">Show Only Disabled</string>
    <string name="filter_enabled">Show Only Enabled</string>
    <string name="filter_all">Show All</string>
    <string name="filter_requires_permission">Requires Permission</string>
    <string name="filter_requires_no_permission">Requires No Permission</string>
    <string name="filter_has_components">Has Components</string>
    <string name="filter_has_no_components">Has No Components</string>
    <string name="filter_system_apps">System Apps</string>
    <string name="filter_non_system_apps">Non-System Apps</string>

    <string name="filter_exported">Show Only Exported</string>
    <string name="filter_unexported">Show Only Unexported</string>

    <string name="mastodon">Mastodon</string>
    <string name="website">Website</string>
    <string name="github">GitHub</string>
    <string name="email">Email</string>
    <string name="patreon">Patreon</string>
    <string name="supporters">Supporters</string>
    <string name="telegram">Telegram</string>
    <string name="discord">Discord</string>

    <string name="device_admin_desc">Device Admin can be used on Samsung One UI devices to launch otherwise un-launchable components.</string>
    <string name="choose_extract_folder_msg">Choose a folder to extract the APK(s) to.</string>
    
    <string name="usage_advanced_search">Advanced Search</string>
    <string name="search">Search</string>

    <string name="extraction_failed_title">Extraction Failed</string>
    <string name="extraction_failed_desc">Unable to extract APKs. Errors are listed below.</string>

    <string name="unable_to_launch_template">Unable to launch this component. You may need to use Shizuku or root. Attempted methods along with their respective errors are shown below.</string>
    <string name="unable_to_change_component_state">Unable to change the state of this component. You may need to use Shizuku or root. Error below:\n\n%s</string>
    <string name="launch_error">Launch Error</string>
    <string name="state_change_error">State Change Error</string>

    <string name="usage_advanced_search_has_permission">Has Permission</string>
    <string name="usage_advanced_search_has_permission_desc">You can use Root Activity Launcher to search for apps that request different permissions. The basic format is: \"has-permission:[AND/OR;]list,of,permissions\". If you use \"AND\", apps must request all permissions in the list to be shown in the results. If you use \"OR\" apps must request at least one permission in the list. The default mode is \"AND\".</string>

    <string name="usage_advanced_search_declares_permission">Declares Permission</string>
    <string name="usage_advanced_search_declares_permission_desc">You can use Root Activity Launcher to search for apps that declare different permissions. The basic format is: \"declares-permission:[AND/OR;]list,of,permissions\". If you use \"AND\", apps must declare all permissions in the list to be shown in the results. If you use \"OR\" apps must declare at least one permission in the list. The default mode is \"AND\".</string>

    <string name="usage_advanced_search_requires_permission">Requires Permission</string>
    <string name="usage_advanced_search_requires_permission_desc">You can use Root Activity Launcher to search for apps and components that require different permissions. The basic format is: \"requires-permission:list,of,permissions\". The only supported mode for this is \"OR\".</string>

    <string name="usage_advanced_search_requires_feature">Requires Feature</string>
    <string name="usage_advanced_search_requires_feature_desc">You can use Root Activity Launcher to search for apps that require different features. The basic format is: \"requires-feature:[AND/OR;]list,of,features\". If you use \"AND\", apps must require all features in the list to be shown in the results. If you use \"OR\" apps must require at least one feature in the list. The default mode is \"AND\".</string>

    <string name="unknown_launch_error">Unknown error launching %s</string>
    <string name="unknown_state_change_error">Unknown error changing state for %s</string>
    <string name="root_or_shizuku_required">Root, Shizuku, or Dhizuku is required.</string>
    <string name="self_disable_error">You can\'t disable Root Activity Launcher from Root Activity Launcher!</string>
    <string name="no_root_access">No root access!</string>
    <string name="no_shizuku_access">No Shizuku permissions!</string>
    <string name="no_dhizuku_access">No Dhizuku permissions!</string>
    <string name="shizuku_not_running">Shizuku is not running!</string>
    <string name="dhizuku_not_running">Dhizuku is not running!</string>
    <string name="no_app_info_error">Provided application info was null!</string>
    
    <string name="sort_apps">Sort Apps</string>
    <string name="sort_by">Sort By</string>
    <string name="sort_by_name">Sort By Name</string>
    <string name="sort_by_installed">Sort By First Installed</string>
    <string name="sort_by_updated">Sort By Last Updated</string>

    <string name="sort_order">Sort Order</string>
    <string name="sort_descending">Descending</string>
    <string name="sort_ascending">Ascending</string>

    <string name="system_app">System App</string>

    <string name="launch_strategy_normal">Normal</string>
    <string name="launch_strategy_normal_desc">Attempt to launch this component how Android normally does.</string>

    <string name="launch_strategy_iterative">Iterative</string>
    <string name="launch_strategy_iterative_desc">Loop through all actions and data schemes the target app filters for. Only custom Intent extras are preserved.</string>

    <string name="launch_strategy_samsung_exploit">Samsung Exploit</string>
    <string name="launch_strategy_samsung_exploit_desc">Use a security loophole in some versions of One UI to launch.</string>

    <string name="launch_strategy_shizuku_java">Shizuku</string>
    <string name="launch_strategy_shizuku_java_desc">Use Shizuku to launch this component using shell or root permissions.</string>

    <string name="launch_strategy_dhizuku_java">Dhizuku</string>
    <string name="launch_strategy_dhizuku_java_desc">Use Dhizuku to launch this component using device admin permissions.</string>

    <string name="launch_strategy_assistant">Voice Assistant</string>
    <string name="launch_strategy_assistant_desc">Temporarily set this component as the system voice assistant and use the system to launch it. Only custom Intent extras are preserved.</string>

    <string name="launch_strategy_knox">KNOX</string>
    <string name="launch_strategy_knox_desc">Use KNOX to launch this component. No custom data is preserved.</string>

    <string name="launch_strategy_root">Root</string>
    <string name="launch_strategy_root_desc">Use root to launch this component.</string>
</resources>