<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/progress"
        android:title=""
        app:actionLayout="@layout/progress"
        app:showAsAction="always"
        />

    <item
        android:id="@+id/action_search"
        android:title="@android:string/search_go"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom"
        />

    <group
        android:checkableBehavior="single">

        <item
            android:id="@+id/filter_disabled"
            android:title="@string/filter_disabled"
            app:showAsAction="never"
            />

        <item
            android:id="@+id/filter_enabled"
            android:title="@string/filter_enabled"
            app:showAsAction="never"
            />

        <item
            android:id="@+id/filter_all"
            android:title="@string/filter_all"
            android:checked="true"
            app:showAsAction="never"
            />

    </group>

</menu>