<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    android:padding="8dp"
    android:minHeight="?listPreferredItemHeight">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/key_wrapper"
        android:hint="@string/hint_key"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:nextFocusDown="@id/value_wrapper"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/extra_type_wrapper"
        app:layout_constraintBottom_toBottomOf="@id/extra_type_wrapper">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/key_field"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:singleLine="true"
            android:scrollHorizontally="true"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/extra_type_wrapper"
        android:hint="@string/type"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:nextFocusUp="@id/value_wrapper"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintStart_toEndOf="@id/key_wrapper"
        app:layout_constraintEnd_toStartOf="@id/remove"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/key_wrapper">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/extra_type_field"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:editable="false"
            android:inputType="none"
            android:singleLine="true"
            android:scrollHorizontally="true"
            tools:text="string"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/value_wrapper"
        android:hint="@string/hint_value"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:nextFocusUp="@id/key_wrapper"
        android:nextFocusDown="@id/extra_type_wrapper"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/key_wrapper"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/remove">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/value_field"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/remove"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:clickable="true"
        android:focusable="true"
        android:background="?android:selectableItemBackgroundBorderless"
        android:src="@drawable/ic_baseline_close_24"
        android:contentDescription="@string/delete"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>